Better Swagger DOCS + Validations for duplicate Customers
